Thu Oct 22 17:29:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (arg_prepend): removed.  a patch from Mikhail T. in
	  [ruby-core:26217].

	* intern.h (rb_thread_join): added prototype.  a patch from
	  Mikhail T. in [ruby-core:26217].

Wed Oct 21 01:19:56 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/monitor.rb (MonitorMixin.mon_release): ensure the scheduled
	  thread to be alive when a thread is releasing a monitor. #2240

Wed Oct 21 00:28:52 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/webrick/httpauth/digestauth.rb: typo in exception message fixed.

Tue Oct 20 16:46:27 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h (finite, scalb): inline'ed non-standard
	  identifier macros.  [ruby-core:2234]

Mon Oct 19 05:54:11 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/rexml/element.rb (text=): false should be converted to string.
	  A patch by Teruo Oshida [ruby-dev:38351]

Fri Oct 16 16:42:57 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (CreateChild): recognize escape characters.

Fri Oct 16 16:41:56 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* dln.c (dln_find_1): backport from trunk. [ruby-core:25802]

Fri Oct 16 09:52:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_clear_cache_for_undef): clear entries for inherited
	  methods.  [ruby-core:26074]

Fri Oct 16 09:20:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb: get rid of double loading.

Thu Oct 15 14:20:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (iconv_create): cannot retry with given block.
	  [ruby-dev:39487]

Thu Oct 15 12:01:11 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (resp_text_code): accepts response codes without
	  text.  backported from trunk.  [ruby-core:24194]

Tue Oct 13 18:54:25 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/variable.rb: bug fix. additional trace definition changes the
	  option of first trace definition.
